--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^6.3.0",
     "@tanstack/react-query": "^5.22.2",
     "@types/axios": "^0.9.36",
+    "@types/simple-peer": "^9.11.8",
     "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
